objects/sixsense__X6sense_Lead_Scores__c.object
<CustomObject>
    <description>Custom object to capture Lead Scores for existing 6sense Leads.</description>
    <fields>
        <fullName>sixsense__CompanyBuyingStage__c</fullName>
        <label>Company Buying Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyIntentScore__c</fullName>
        <label>Company Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__CompanyProfileFit__c</fullName>
        <label>Company Profile Fit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Company_ID__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__LeadProductKey__c</fullName>
        <description>Concatenation of Lead ID and Product Key separated by an underscore</description>
        <externalId>true</externalId>
        <inlineHelpText>Concatenation of Lead ID and Product Key separated by an underscore</inlineHelpText>
        <label>LeadProductKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sixsense__Orphaned__c</fullName>
        <formula>OR(
            ISBLANK(sixsense__lead_id__c),
            sixsense__lead_id__r.IsConverted == true,
            NOT(CONTAINS(sixsense__LeadProductKey__c, sixsense__lead_id__c))
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphaned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sixsense__ProductId__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>sixsense__X6sense_Product__c</referenceTo>
        <relationshipLabel>6sense Lead Scores</relationshipLabel>
        <relationshipName>X6sense_Lead_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__Product_Name__c</fullName>
        <description>Plain text name of the product related to this score.</description>
        <label>Product Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__QueuedForProcessing__c</fullName>
        <externalId>true</externalId>
        <label>Queued For Processing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Txn_Id__c</fullName>
        <label>Txn Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Updated__c</fullName>
        <label>Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sixsense__grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__intent_score__c</fullName>
        <description>Lead Intent Score</description>
        <label>Intent Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__lead_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>6sense Predictive Intelligence - Leads</relationshipLabel>
        <relationshipName>X6sense_Lead_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sixsense__profile_fit__c</fullName>
        <label>Profile Fit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>6sense Lead Score</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>6sense Lead Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>